lib_LIBRARIES=libyifei.a

libyifei_a_SOURCES=./net/yf_net_imp.c \
./net/yf_connection.c \
./mio_driver/yf_event.c \
./mio_driver/fd_poller/yf_epoll.c \
./mio_driver/fd_poller/yf_select.c \
./mio_driver/fd_poller/yf_poll.c \
./mio_driver/event_in/yf_fd_event_in.c \
./mio_driver/event_in/yf_tm_event_in.c \
./mio_driver/event_in/yf_poll_in.c \
./mio_driver/event_in/yf_sig_event_in.c \
./mio_driver/event_in/yf_processor_event_in.c \
./mio_driver/yf_send_recv.c \
./bridge/bridge_in/yf_bridge_in.c \
./bridge/bridge_in/yf_bridge_task.c \
./bridge/bridge_in/yf_bridge_signal.c \
./bridge/bridge_in/yf_bridge_proc.c \
./bridge/bridge_in/yf_bridge_thr.c \
./base_struct/yf_bit_op.c \
./base_struct/yf_rbtree.c \
./base_struct/yf_buf.c \
./base_struct/yf_hash.c \
./base_struct/yf_mem_pool.c \
./base_struct/yf_string.c \
./base_struct/yf_log.c \
./base_struct/yf_array.c \
./base_struct/yf_node_pool.c \
./base_struct/yf_slab_pool.c \
./ppc/yf_time.c \
./ppc/yf_cpuinfo.c \
./ppc/yf_process.c \
./ppc/yf_socket.c \
./ppc/yf_channel.c \
./ppc/yf_setproctitle.c \
./ppc/yf_errno.c \
./ppc/yf_signal.c \
./ppc/yf_fast_lock.c \
./ppc/yf_shmem.c \
./ppc/yf_thread.c \
./ppc/yf_file.c \
./ppc/yf_alloc.c \
./ppc/yf_proc_ctx.c \
./ppc/yf_atexit.c